--- a/service.html
+++ b/service.html
@@ -67,7 +67,7 @@
 
                         <div class="card-grid">
                             <div class="individual_project">
-                                <div class="flip-card">
+                                <div class="flip-card" tabindex="0">
                                     <div class="flip-card-inner">
                                         <div class="flip-card-front">
                                             <img class = "imgCenter" src="image/baixiansquad.png" alt="2017 BaiXian Group">
@@ -79,7 +79,7 @@
                                 </div>
                             </div>
                             <div class="individual_project">
-                                <div class="flip-card">
+                                <div class="flip-card" tabindex="0">
                                     <div class="flip-card-inner">
                                         <div class="flip-card-front">
                                             <img class = "imgCenter" src="image/baixiantrip.png" alt="2017 BaiXian Trip">
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="individual_project">
-                                <div class="flip-card">
+                                <div class="flip-card" tabindex="0">
                                     <div class="flip-card-inner">
                                         <div class="flip-card-front">
                                             <img class = "imgCenter" src="image/baixianGirls.png" alt="2017 BaiXian Girls">
