--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <span class="tags">Semi-structured Interview</span>
                     <span class="tags">Questionnaire</span>
                     <span class="tags">Natural Language Processing</span>
+                    <span class="tags">Multivariate Analysis</span>
                     </div>
 
                 <h2>Technology I employ</h2>
@@ -114,6 +115,7 @@
                         <span class="tags">Linux</span>
                         <span class="tags">Spark</span>
                         <span class="tags">JavaScript</span>
+                        <span class="tags">React</span>
                     </div>
 
                 <h2>Background</h2>
